[package]
name = "stoneblock"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tinyrand = "0.5.0"
serde = { version = "1.0.197", features = [ "derive" ] }
toml = "0.8.12"
serde_json = "1.0.115"
dyn-clone = "1.0.17"